fix missing comma on wrap/nowrap class

--- a/src/layout.scss
+++ b/src/layout.scss
@@ -13,14 +13,20 @@
 }
 
 [nowrap],
-[row="nowrap"], [column="nowrap"]
-.nowrap { flex-wrap: nowrap; }
+[row="nowrap"],
+[column="nowrap"],
+.nowrap
+{ flex-wrap: nowrap; }
 
 [wrap],
-[row="wrap"], [column="wrap"]
-.wrap { flex-wrap: wrap; }
+[row="wrap"],
+[column="wrap"],
+.wrap
+{ flex-wrap: wrap; }
 
-.layout-fill, [fill], [layout-fill] {
+[fill],
+.layout-fill,
+[layout-fill] {
   position: relative;
   min-height: 100%;
   height: 100%;
@@ -40,21 +46,15 @@
 }
 
 @media #{$mobile} {
-  #{$mobileColumn} {
-    flex-direction: column;
-    flex-wrap: nowrap;
-    display: flex;
-  }
-
-  #{$mobileRow} {
-    flex-direction: row;
-    flex-wrap: wrap;
-    display: flex;
-  }
-
-  .mobile-wrap,
-  [mobile-wrap] { flex-wrap: wrap; }
-
   [mobile-nowrap],
-  .mobile-nowrap { flex-wrap: nowrap; }
+  [mobile-row="nowrap"],
+  [mobile-column="nowrap"],
+  .mobile-nowrap
+  { flex-wrap: nowrap; }
+
+  [mobile-wrap],
+  [mobile-row="wrap"],
+  [mobile-column="wrap"],
+  .mobile-wrap
+  { flex-wrap: wrap; }
 }
